--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,99 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/splash"
+    android:orientation="vertical"
     tools:context=".Login">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:src="@drawable/logo"
-        android:layout_marginTop="100dp"/>
+    <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="@dimen/_100sdp"
+        android:layout_height="@dimen/_100sdp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/_50sdp"
+        android:src="@drawable/logo" />
 
-
-    <EditText
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etEmail"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="15dp"
+        android:layout_height="@dimen/_54sdp"
+        android:layout_marginLeft="@dimen/_30sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginRight="@dimen/_30sdp"
+        android:backgroundTint="@color/colorWhite"
+        android:fontFamily="@font/lora_regular"
         android:hint="Email"
-        android:textColorHint="#FFF"
-        android:layout_marginLeft="40dp"
         android:inputType="textEmailAddress"
-        android:backgroundTint="#FFF"
-        android:layout_marginRight="40dp"/>
+        android:textColorHint="@color/colorWhite" />
 
 
-    <EditText
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etPassword"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginLeft="@dimen/_30sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginRight="@dimen/_30sdp"
+        android:backgroundTint="@color/colorWhite"
+        android:fontFamily="@font/lora_regular"
         android:hint="Password"
-        android:textColorHint="#FFF"
-        android:layout_marginLeft="40dp"
-        android:backgroundTint="#FFF"
         android:inputType="textPassword"
-        android:layout_marginRight="40dp"/>
+        android:textColorHint="@color/colorWhite" />
 
-    <TextView
-        android:layout_width="match_parent"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="@dimen/_10sdp"
+        android:paddingBottom="@dimen/_10sdp"
         android:text="Forgot password"
         android:textAlignment="center"
-        android:textColor="#83FFFFFF"
-        android:layout_marginTop="10dp"/>
+        android:textSize="@dimen/_12sdp"
+        android:textColor="@color/colorTextView" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_marginRight="100dp"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="20dp"
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnLogin"
-        android:text="Sign In"
-        android:textColor="#1F1F1F"
-        android:textSize="16sp"
-        android:background="@drawable/loginbutton"/>
-
-    <TextView
         android:layout_width="match_parent"
+        android:layout_height="@dimen/_45sdp"
+        android:layout_marginLeft="@dimen/_80sdp"
+        android:layout_marginRight="@dimen/_80sdp"
+        android:background="@drawable/loginbutton"
+        android:fontFamily="@font/lora_regular"
+        android:text="Sign In"
+        android:textAllCaps="false"
+        android:textColor="@color/colorBlackTextView"
+        android:textSize="@dimen/_14sdp" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:text="Or"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:layout_marginTop="15dp"/>
+        android:textColor="@color/colorWhite"
+        android:textSize="@dimen/_14sdp" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/btnFb"
-        android:layout_marginRight="40dp"
-        android:layout_marginLeft="40dp"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:src="@drawable/fb"/>
+        android:layout_height="@dimen/_54sdp"
+        android:layout_marginLeft="@dimen/_30sdp"
+        android:layout_marginRight="@dimen/_30sdp"
+        android:src="@drawable/fb" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/btnG"
-        android:layout_marginRight="40dp"
-        android:layout_marginLeft="40dp"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:src="@drawable/g"/>
+        android:layout_height="@dimen/_54sdp"
+        android:layout_marginLeft="@dimen/_30sdp"
+        android:layout_marginRight="@dimen/_30sdp"
+        android:src="@drawable/g" />
 
-
-    <TextView
-        android:layout_width="match_parent"
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="New User? Sign Up"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp" />
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal">
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="New User?"
+            android:textAlignment="center"
+            android:textColor="@color/colorTextView"
+            android:fontFamily="@font/lora_regular"
+            android:textSize="@dimen/_12sdp" />
 
-</LinearLayout>
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=" Sign Up"
+            android:textAlignment="center"
+            android:textColor="@color/colorWhite"
+            android:fontFamily="@font/lora_regular"
+            android:textSize="@dimen/_14sdp" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+</androidx.appcompat.widget.LinearLayoutCompat>
