--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,132 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/splash"
-    android:orientation="vertical"
-    tools:context=".Registration">
+    android:layout_height="match_parent">
 
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:layout_gravity="center_horizontal"
-        android:layout_width="@dimen/_100sdp"
-        android:layout_height="@dimen/_100sdp"
-        android:layout_marginTop="@dimen/_20sdp"
-        android:src="@drawable/logo" />
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etFirstname"
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_54sdp"
-        android:layout_marginLeft="@dimen/_30sdp"
-        android:layout_marginTop="@dimen/_20sdp"
-        android:layout_marginRight="@dimen/_30sdp"
-        android:backgroundTint="@color/colorWhite"
-        android:fontFamily="@font/lora_regular"
-        android:hint="First Name"
-        android:textColorHint="@color/colorWhite" />
+        android:layout_height="match_parent"
+        android:background="@drawable/splash"
+        android:orientation="vertical"
+        tools:context=".Registration">
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etLastname"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_54sdp"
-        android:layout_marginLeft="@dimen/_30sdp"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_marginRight="@dimen/_30sdp"
-        android:backgroundTint="@color/colorWhite"
-        android:hint="Last Name"
-        android:fontFamily="@font/lora_regular"
-        android:textColorHint="@color/colorWhite" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="@dimen/_100sdp"
+            android:layout_height="@dimen/_100sdp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:src="@drawable/logo" />
 
-    <EditText
-        android:id="@+id/etEmail"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_54sdp"
-        android:layout_marginLeft="@dimen/_30sdp"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_marginRight="40dp"
-        android:backgroundTint="#FFF"
-        android:hint="Email Address"
-        android:inputType="textEmailAddress"
-        android:textColorHint="#FFF" />
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/etFirstname"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginLeft="@dimen/_30sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginRight="@dimen/_30sdp"
+            android:backgroundTint="@color/colorWhite"
+            android:fontFamily="@font/lora_regular"
+            android:hint="First Name"
+            android:textColorHint="@color/colorWhite"
+            android:textSize="@dimen/_14sdp" />
 
-    <EditText
-        android:id="@+id/etPhone"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="40dp"
-        android:backgroundTint="#FFF"
-        android:hint="Phone No."
-        android:textColorHint="#FFF" />
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/etLastname"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginLeft="@dimen/_30sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginRight="@dimen/_30sdp"
+            android:backgroundTint="@color/colorWhite"
+            android:fontFamily="@font/lora_regular"
+            android:hint="Last Name"
+            android:textColorHint="@color/colorWhite"
+            android:textSize="@dimen/_14sdp" />
 
-    <EditText
-        android:id="@+id/etPassword"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="40dp"
-        android:backgroundTint="#FFF"
-        android:hint="Password"
-        android:textColorHint="#FFF" />
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/etEmail"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginLeft="@dimen/_30sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginRight="40dp"
+            android:backgroundTint="@color/colorWhite"
+            android:fontFamily="@font/lora_regular"
+            android:hint="Email Address"
+            android:inputType="textEmailAddress"
+            android:textColorHint="@color/colorWhite"
+            android:textSize="@dimen/_14sdp" />
 
-    <EditText
-        android:id="@+id/etConfirmpassword"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="40dp"
-        android:backgroundTint="#FFF"
-        android:hint="Confirm Password"
-        android:inputType="textEmailAddress"
-        android:textColorHint="#FFF" />
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/etPhone"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginLeft="@dimen/_30sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginRight="@dimen/_30sdp"
+            android:backgroundTint="@color/colorWhite"
+            android:fontFamily="@font/lora_regular"
+            android:hint="Phone No."
+            android:textColorHint="@color/colorWhite"
+            android:textSize="@dimen/_14sdp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="30dp"
-        android:orientation="horizontal">
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginLeft="@dimen/_30sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginRight="@dimen/_30sdp"
+            android:backgroundTint="@color/colorWhite"
+            android:fontFamily="@font/lora_regular"
+            android:hint="Password"
+            android:textColorHint="@color/colorWhite"
+            android:textSize="@dimen/_14sdp" />
 
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/etConfirmpassword"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginLeft="@dimen/_30sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginRight="@dimen/_30sdp"
+            android:backgroundTint="@color/colorWhite"
+            android:fontFamily="@font/lora_regular"
+            android:hint="Confirm Password"
+            android:inputType="textEmailAddress"
+            android:textColorHint="@color/colorWhite"
+            android:textSize="@dimen/_14sdp" />
 
-        <TextView
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="I agreed to the Terms and Conditions and Privacy Policy"
-            android:textColor="#6BFFFFFF"
-            android:textSize="12sp" />
+            android:layout_marginLeft="@dimen/_30sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginRight="@dimen/_30sdp"
+            android:orientation="horizontal">
 
-    </LinearLayout>
+            <androidx.appcompat.widget.AppCompatCheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
 
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:fontFamily="@font/lora_regular"
+                android:text="I agreed to the Terms and Conditions and Privacy Policy"
+                android:textColor="@color/colorTextView"
+                android:textSize="@dimen/_12sdp" />
 
-    <Button
-        android:id="@+id/btnSignup"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="100dp"
-        android:background="@drawable/loginbutton"
-        android:text="Sign Up"
-        android:textColor="#1F1F1F"
-        android:textSize="16sp" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="Already have an account? Sign In"
-        android:textAlignment="center"
-        android:textColor="#F1F1F1"
-        android:textSize="16sp" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
 
-</LinearLayout>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnSignup"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginLeft="@dimen/_80sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginRight="@dimen/_80sdp"
+            android:background="@drawable/loginbutton"
+            android:text="Sign Up"
+            android:textColor="@color/colorBlackTextView"
+            android:textSize="16sp" />
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:orientation="horizontal">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lora_regular"
+                android:text="Already have an account?"
+                android:textAlignment="center"
+                android:textColor="@color/colorTextView"
+                android:textSize="@dimen/_12sdp" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lora_regular"
+                android:text=" Sign In"
+                android:textAlignment="center"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/_14sdp" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+</ScrollView>
