--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,9 @@
 
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
+    <color name="colorDarkBlue">#1B346C</color>
     <color name="colorTextView">#9a9db5</color>
     <color name="colorBlackTextView">#111111</color>
+    <color name="colorLightGrey">#8B8B8B</color>
 
 </resources>
